appId: null
---
- tapOn: "GET STARTED"
- tapOn:
    point: "70%, 20%"
- tapOn:
    point: "30%, 20%"
