appId: com.aymanearfaoui.FindMyClass
---
- tapOn: "GET STARTED"
- tapOn:
    point: "50%,50%"
- tapOn:
    point: "50%, 87%"
- assertVisible: "Destination"
- tapOn:
      point: "15%, 27%"