appId: com.aymanearfaoui.FindMyClass
---
- tapOn: "GET STARTED"
- tapOn:
    point: "45%,35%"
- tapOn:
    point: "51%,94%"
- tapOn:
    point: "71%,84%"

