appId: com.aymanearfaoui.FindMyClass
---
- tapOn: GET STARTED
- tapOn:  Planner
- tapOn: Mon 7